tests/codegen/fail/input-object/derive_incompatible_field_type.stderr
error[E0277]: the trait bound `ObjectA: IsInputType<__S>` is not satisfied
 --> fail/input-object/derive_incompatible_field_type.rs:8:10
  |
8 | #[derive(GraphQLInputObject)]
  |          ^^^^^^^^^^^^^^^^^^ the trait `IsInputType<__S>` is not implemented for `ObjectA`
  |
  = help: the following other types implement trait `IsInputType<S>`:
            <&T as IsInputType<S>>
            <Arc<T> as IsInputType<S>>
            <Box<T> as IsInputType<S>>
            <ID as IsInputType<__S>>
            <Object as IsInputType<__S>>
            <TypeKind as IsInputType<__S>>
            <Vec<T> as IsInputType<S>>
            <[T; N] as IsInputType<S>>
          and 13 others
  = note: this error originates in the derive macro `GraphQLInputObject` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ObjectA: FromInputValue<__S>` is not satisfied
    --> fail/input-object/derive_incompatible_field_type.rs:8:10
     |
8    | #[derive(GraphQLInputObject)]
     |          ^^^^^^^^^^^^^^^^^^ the trait `FromInputValue<__S>` is not implemented for `ObjectA`
     |
     = help: the following other types implement trait `FromInputValue<S>`:
               <Arc<T> as FromInputValue<S>>
               <Box<T> as FromInputValue<S>>
               <ID as FromInputValue<__S>>
               <Object as FromInputValue<__S>>
               <TypeKind as FromInputValue<__S>>
               <Vec<T> as FromInputValue<S>>
               <[T; N] as FromInputValue<S>>
               <bool as FromInputValue<__S>>
             and 10 others
note: required by a bound in `Registry::<'r, S>::arg`
    --> $WORKSPACE/juniper/src/executor/mod.rs
     |
     |         T: GraphQLType<S> + FromInputValue<S>,
     |                             ^^^^^^^^^^^^^^^^^ required by this bound in `Registry::<'r, S>::arg`
     = note: this error originates in the derive macro `GraphQLInputObject` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ObjectA: FromInputValue<__S>` is not satisfied
 --> fail/input-object/derive_incompatible_field_type.rs:8:10
  |
8 | #[derive(GraphQLInputObject)]
  |          ^^^^^^^^^^^^^^^^^^ the trait `FromInputValue<__S>` is not implemented for `ObjectA`
  |
  = help: the following other types implement trait `FromInputValue<S>`:
            <Arc<T> as FromInputValue<S>>
            <Box<T> as FromInputValue<S>>
            <ID as FromInputValue<__S>>
            <Object as FromInputValue<__S>>
            <TypeKind as FromInputValue<__S>>
            <Vec<T> as FromInputValue<S>>
            <[T; N] as FromInputValue<S>>
            <bool as FromInputValue<__S>>
          and 10 others
  = note: this error originates in the derive macro `GraphQLInputObject` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ObjectA: ToInputValue<_>` is not satisfied
 --> fail/input-object/derive_incompatible_field_type.rs:8:10
  |
8 | #[derive(GraphQLInputObject)]
  |          ^^^^^^^^^^^^^^^^^^ the trait `ToInputValue<_>` is not implemented for `ObjectA`
  |
  = help: the following other types implement trait `ToInputValue<S>`:
            <&'a T as ToInputValue<S>>
            <&'a [T] as ToInputValue<S>>
            <&'a str as ToInputValue<S>>
            <Arc<T> as ToInputValue<S>>
            <Box<T> as ToInputValue<S>>
            <ID as ToInputValue<__S>>
            <Object as ToInputValue<__S>>
            <TypeKind as ToInputValue<__S>>
          and 14 others
  = note: this error originates in the derive macro `GraphQLInputObject` (in Nightly builds, run with -Z macro-backtrace for more info)
